# inviwo-openmesh

./: .gitmodules  CMakeLists.txt  Jenkinsfile  openmeshmodule.cpp  readme.md
data/workspaces/: mesh-decimation.inv
include/inviwo/openmesh/utils/: meshdecimation.h
processors/: trianglestowireframe.cpp
src/: openmeshreader.cpp  openmeshwriter.cpp
src/utils/: openmeshconverters.cpp
utils/: meshiteratorutils.h  openmeshconverters.h
